log
Fri Mar 20 10:22:04 PM UTC 2026: 
 exercises.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
 tests:  1|4
total_score: 10/70
ceef71b
Fri Mar 20 10:32:58 PM UTC 2026: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  2|3
total_score: 20/70
227453d
Fri Mar 20 10:41:57 PM UTC 2026: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   65 |       suma += dato;
      |            ^~
32fbe16
